--- a/index.html
+++ b/index.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Test</title>
-		<meta name="robots" content="none">
-	</head>
-	<body>
-		<p>This is a test page.</p>
-	</body>
+    <head>
+        <title>ニコニコ同好会(to dai)</title>
+        <meta name="robots" content="none">
+        <link rel="stylesheet" href="/styles/main.css" />
+        <link rel="stylesheet" href="/styles/lp.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@800&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <div style="position: relative">
+                <div class="lp-back" id="back1"></div>
+                <div class="lp-back" id="back2"></div>
+            </div>
+            <h1><span>ニコニコ同好会 (to dai)</span></h1>
+        </header>
+        <main>
+            <h2>ニコニコ同好会 (to dai) って？</h2>
+            <p><strong>ニコニコ同好会 (to dai)</strong> は、<a href="https://www.nicovideo.jp" target="_blank">ニコニコ動画</a>の好きな東大生が集まる、2025年の9月に誕生した新しいサークルです。</p>
+            <h2>活動内容</h2>
+            <p>主な活動内容は下の通りになります。</p>
+            <ul>
+                <li>相互の技術支援</li>
+                <li>投稿者同士で仲間を見つける</li>
+                <li>アイデア共有</li>
+                <li>その他交流</li>
+            </ul>
+            <h2>活動場所</h2>
+            <p>基本的に活動は Discord サーバー上で行われます。ただし、今後対面活動を実施することも予定しています。</p>
+            <h2>会費</h2>
+            <p>会費は<b>完全無料</b>となっています（ただし、個別の活動に際して参加者から集金することがあります）。</p>
+            <h2>入会のお誘い</h2>
+            <p>
+                当会は新規設立されたばかりです。ぜひ参加して、一緒にこのサークルをこの手で作り上げていきませんか？
+                <br>
+                入会の際は、<a href="https://forms.gle/tfmiWNzvA3ByqwYY8" target="_blank">Google フォーム</a>に回答を送信してください。「必ず入会するとは言えないが気になっている」という場合は、お気軽に下の連絡先までご連絡ください。
+            </p>
+            <h2>連絡先</h2>
+            <p>疑問に思ったことや、入会に際して相談したいことがあれば、以下の手段で連絡してください。</p>
+            <ul>
+                <li>Twitter : <a href="https://x.com/niconico_todai" target="_blank">@niconico_todai</a></li>
+                <li>E-mail : <a href="mailto:nico25todai@gmail.com">nico25todai@gmail.com</a></li>
+            </ul>
+        </main>
+        <footer>
+            <small>ニコニコ同好会 (to dai) - <a href="https://x.com/niconico_todai" target="_blank">Twitter</a> / <a href="mailto:nico25todai@gmail.com">E-mail</a></small>
+        </footer>
+    </body>
 </html>
