スマホからの見え方調整

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2>活動場所</h2>
             <p>基本的に活動は Discord サーバー上で行われます。ただし、今後対面活動を実施することも予定しています。</p>
             <h2>会費</h2>
-            <p>会費は<b>完全無料</b>となっています（ただし、個別の活動に際して参加者から集金することがあります）。</p>
+            <p>年会費・入会費ともに<b>完全無料</b>となっています（ただし、個別の活動に際して参加者から集金することがあります）。</p>
             <h2>入会のお誘い</h2>
             <p>
                 当会は新規設立されたばかりです。ぜひ参加して、一緒にこのサークルをこの手で作り上げていきませんか？
