--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
         <main>
             <h2>ニコニコ同好会 (to dai) って？</h2>
-            <p><strong>ニコニコ同好会 (to dai)</strong> は、<a href="https://www.nicovideo.jp" target="_blank">ニコニコ動画</a>の好きな東大生が集まる、2025年の9月に誕生した新しいサークルです。</p>
+            <p><strong>ニコニコ同好会 (to dai)</strong> は、<a href="https://www.nicovideo.jp" target="_blank">ニコニコ動画</a>の好きな東大生が集まる、この秋に誕生した新しいサークルです。</p>
             <h2>活動内容</h2>
             <p>主な活動内容は下の通りになります。</p>
             <ul>
@@ -42,11 +42,11 @@
             <p>疑問に思ったことや、入会に際して相談したいことがあれば、以下の手段で連絡してください。</p>
             <ul>
                 <li>Twitter : <a href="https://x.com/niconico_todai" target="_blank">@niconico_todai</a></li>
-                <li>E-mail : <a href="mailto:nico25todai@gmail.com">nico25todai@gmail.com</a></li>
+                <li>E-mail : <a href="mailto:nico25todai@gmail.com">nico25todai+site@gmail.com</a></li>
             </ul>
         </main>
         <footer>
-            <small>ニコニコ同好会 (to dai) - <a href="https://x.com/niconico_todai" target="_blank">Twitter</a> / <a href="mailto:nico25todai@gmail.com">E-mail</a></small>
+            <small>ニコニコ同好会 (to dai) - <a href="https://x.com/niconico_todai" target="_blank">Twitter</a> / <a href="mailto:nico25todai+site@gmail.com">E-mail</a></small>
         </footer>
     </body>
 </html>
