インデックス許可

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
     <head>
         <title>ニコニコ同好会(to dai)</title>
-        <meta name="robots" content="none">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="description" content="ニコニコ同好会 (to dai) は、ニコニコ動画の好きな東大生が集まる、2025年の9月に誕生した新しいサークルです。" />
         <link rel="stylesheet" href="/styles/main.css" />
         <link rel="stylesheet" href="/styles/lp.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
