--- a/index.html
+++ b/index.html
@@ -49,5 +49,14 @@
         <footer>
             <small>ニコニコ同好会 (to dai) - <a href="https://x.com/niconico_todai" target="_blank">Twitter</a> / <a href="mailto:nico25todai+site@gmail.com">E-mail</a></small>
         </footer>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-2WEJT9GVS4"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-2WEJT9GVS4');
+        </script>
     </body>
 </html>
