学外生も入れる旨の追記

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </header>
         <main>
             <h2>ニコニコ同好会 (to dai) って？</h2>
-            <p><strong>ニコニコ同好会 (to dai)</strong> は、<a href="https://www.nicovideo.jp" target="_blank">ニコニコ動画</a>の好きな東大生が集まる、この秋に誕生した新しいサークルです。</p>
+            <p><strong>ニコニコ同好会 (to dai)</strong> は、<a href="https://www.nicovideo.jp" target="_blank">ニコニコ動画</a>の好きな学生が集まる、この秋に誕生した新しい東京大学のサークルです。東京大学の学外生も入ることができます。</p>
             <h2>活動内容</h2>
             <p>主な活動内容は下の通りになります。</p>
             <ul>
@@ -46,7 +46,7 @@
             <p>
                 当会は新規設立されたばかりです。ぜひ参加して、一緒にこのサークルをこの手で作り上げていきませんか？
                 <br>
-                入会の際は、<a href="https://forms.gle/tfmiWNzvA3ByqwYY8" target="_blank">Google フォーム</a>に回答を送信してください。「必ず入会するとは言えないが気になっている」という場合は、お気軽に下の連絡先までご連絡ください。
+                入会の際は、<a href="https://forms.gle/tfmiWNzvA3ByqwYY8" target="_blank">Google フォーム</a>に回答を送信してください。「必ず入会するとは言えないが気になっている」という場合は、お気軽に下の連絡先までご連絡ください。東京大学以外の大学の学生も入ることができます。
             </p>
             <h2>連絡先</h2>
             <p>疑問に思ったことや、入会に際して相談したいことがあれば、以下の手段で連絡してください。</p>
